--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <title>Musicana</title>
+  <link rel="icon" type="image/jpg" href="musicana.jpg">
   <!-- Load FontAwesome icons -->
   <link rel="stylesheet"
         href=
@@ -11,8 +12,10 @@
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+  
   <nav class="navbar">
     <h1><strong>Musicana</strong></h1>
+    <img id="logo" src="musicana logo.jpg" alt="LOGO"/>
   </nav>
   <div class="player">
     <div class="wrapper">
