--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <title>Musicana</title>
-  <link rel="icon" type="image/jpg" href="musicana.jpg">
+  <link rel="icon" type="image/ico" href="musicana.ico">
   <!-- Load FontAwesome icons -->
   <link rel="stylesheet"
         href=
